--- a/grid2.css
+++ b/grid2.css
@@ -9,14 +9,20 @@ body {
     max-width: 1143px;
     min-height: 1583px;
     font-size: 2rem;
-    opacity: 0.5;
+    opacity: 1;
     color: blue;
 }
 
 .container {
     display: grid;
-    grid-template-rows: 38px 122px 60px 428px 915px; 
-    grid-template-columns: minmax(270px, auto) minmax(212px, auto) minmax(463px, auto) minmax(335px, auto); 
+    grid-template-rows: minmax(38px, auto) minmax(122px, auto) minmax(60px, auto) minmax(428px, auto) minmax(915px, auto);
+    grid-template-columns: minmax(270px, 1fr) minmax(212px, 1fr) minmax(463px, 1fr) minmax(335px, 1fr);
+    grid-template-areas:
+        "one one one one"
+        "two six six six"
+        "three three three three"
+        "four four seven eight"
+        "five five five eight";
 }
 
 
@@ -114,14 +120,21 @@ ul {
 
 @media (max-width: 500px) {
     .container {
-    grid-template-columns: 100%;
+        grid-template-columns: 100%;
 
-    grid-template-areas:
-    "one"
-    "two"
-    "three"
-    "four"
-    "five"
-    "six";
+        grid-template-areas:
+            "one"
+            "two"
+            "three"
+            "four"
+            "five"
+            "six"
+            "seven"
+            "eight";
+    }
+
+    ul {
+        flex-direction: column;
+        font-size: 12px;
     }
 }
